--- a/kipeto-tools/pom.xml
+++ b/kipeto-tools/pom.xml
@@ -25,6 +25,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.2</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
