--- a/kipeto/pom.xml
+++ b/kipeto/pom.xml
@@ -1,23 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <name>Kipeto</name>
   <groupId>de.ecclesia.kipeto</groupId>
   <artifactId>kipeto</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <parent>
 	<groupId>de.ecclesia.kipeto</groupId>
 	<artifactId>kipeto-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
   </parent>
   
   <dependencies>
   	<dependency>
 	  <groupId>de.ecclesia.kipeto</groupId>
       <artifactId>kipeto-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
 	</dependency>
   </dependencies>
 
