--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<name>Kipeto Parent</name>
 	<groupId>de.ecclesia.kipeto</groupId>
 	<artifactId>kipeto-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<description>An agile software deployment system</description>
 	<url>http://github.com/ecclesia/kipeto</url>
@@ -41,8 +41,9 @@
 		<connection>scm:git:git@github.com:ecclesia/kipeto.git</connection>
 		<developerConnection>scm:git:git@github.com:ecclesia/kipeto.git</developerConnection>
 		<url>git@github.com:ecclesia/kipeto.git</url>
-	</scm>
-	<dependencies/>
+	  <tag>kipeto-parent-1.0.0</tag>
+  </scm>
+	<dependencies />
 	<properties>
 		<project.inceptionYear>2010</project.inceptionYear>
 		<license.licenseName>apache_v2</license.licenseName>
