--- a/kipeto-bootstrap/pom.xml
+++ b/kipeto-bootstrap/pom.xml
@@ -4,12 +4,12 @@
 	<name>Kipeto Bootstrapper</name>
 	<groupId>de.ecclesia.kipeto</groupId>
 	<artifactId>kipeto-bootstrap</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>de.ecclesia.kipeto</groupId>
 		<artifactId>kipeto-parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>de.ecclesia.kipeto</groupId>
 			<artifactId>kipeto-common</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
