--- a/kipeto-ant/pom.xml
+++ b/kipeto-ant/pom.xml
@@ -7,14 +7,14 @@
   <parent>
 	<groupId>de.ecclesia.kipeto</groupId>
 	<artifactId>kipeto-parent</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
   </parent>
   
   <dependencies>
 	<dependency>
 		<groupId>de.ecclesia.kipeto</groupId>
 		<artifactId>kipeto-tools</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</dependency>
 
 	<dependency>
