--- a/kipeto-core/pom.xml
+++ b/kipeto-core/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.ecclesia.kipeto</groupId>
 		<artifactId>kipeto-parent</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>de.ecclesia.kipeto</groupId>
 			<artifactId>kipeto-common</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
