--- a/kipeto-tools/pom.xml
+++ b/kipeto-tools/pom.xml
@@ -6,14 +6,14 @@
   <parent>
 	<groupId>de.ecclesia.kipeto</groupId>
 	<artifactId>kipeto-parent</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
   </parent>
   
   <dependencies>
 	<dependency>
 		<groupId>de.ecclesia.kipeto</groupId>
 		<artifactId>kipeto-core</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</dependency>
   </dependencies>
 
