--- a/kipeto-common/pom.xml
+++ b/kipeto-common/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.ecclesia.kipeto</groupId>
 		<artifactId>kipeto-parent</artifactId>
-		<version>1.0.2</version>
+		<version>1.0.3-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
